Fixed minor bugs that showed up after we went live.